--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,7 +129,9 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-netpie-auth')
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile project(':react-native-netpie-mqtt-auth-generator')
+    compile project(':react-native-mqtt')
 }
 
 // Run this once to be able to run the application with BUCK
