--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react": "15.3.1",
-    "react-native": "0.32.0"
+    "react-native": "0.32.0",
+    "react-native-mqtt": "0.1.0-beta4",
+    "react-native-netpie-mqtt-auth-generator": "^1.0.0"
   }
 }
